# yoake

./: .env  .gitignore  Cargo.toml  Makefile  config-test.yml  config.yaml  config.yml  go.mod  go.sum
assets/: msg-canvas-grades.tpl.html
cmd/compile/: compile.go
cmd/server/: server.go
config/: canvas.go  comm.go  config.go  db.go  fs.go
etc/: service-install.fish  yoake-server.service  yoake.apparmor
internal/apparmor/: api.go  apparmor.c  apparmor.h  magic.go
internal/auth/: auth.go  gob.go  kdf.go  role.go  yubikey.go
internal/canvaslms/: graph.go  handler.go  message.go
internal/comm/: api.go  communicator.go  convert.go  interface.go  provider.go
internal/db/: badger.go  db.go  error.go
internal/echoerror/: httperror.go  middleware.go
internal/entertainment/: api.go  util.go  youtube.go
internal/filestore/: fs.go
internal/gomod/: go.test.mod  htmlTemplate.go  resolve.go
internal/health/: api.go  api_compliance.go  api_directions.go  api_shorthand.go  compliance.go  db.go  parser.go  parser_test.go  template.go
internal/servetpl/: middleware.go  parse.go
internal/session/: manager.go
internal/twilio/: api.go  mime.go  twilio_test.go  verify.go
internal/uinext/: README.md
internal/util/: apparmor_header.go  daterange.go  slice.go
internal/utilapi/: handler.go
internal/version/: version.go  version_vcs.go
migrations/2023-06-07-213214_session_store/: up.sql
migrations/2023-06-13-192016_med_management/: down.sql  up.sql
migrations/2023-08-26-084717_jpn_wordbook/: down.sql  up.sql
scripts/: deploy.fish  dev.fish  webroot-build.fish
server/: server.go
server/vault/: server.go
server/webroot/: log.go  server.go
src/: http.rs  lib.rs  schema.rs  ui.rs
src/apps/: mod.rs
src/comm/: discord.rs  email.rs  gotify.rs  mod.rs
src/config/: comm.rs  mod.rs
src/models/: jpn_wordbook.rs  med.rs  med_test.rs  mod.rs  session.rs
templates/: grades.html
ui/: index.html  package.json  vite.config.ts
webroot/: auth.tpl.json  favicon.build.sh  file_access.tpl.html  index.tpl.html  style.css  style.tpl.css
(+116 files in other folders)
