[package]
name = "yoake"
version = "0.1.0"
edition = "2021"
authors = ["Yumechi <yume@yumechi.jp>"]
description = "Yoake is Yumechi's Personal Information Management System."


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes-gcm = "0.10.2"
anyhow = "1.0.71"
argon2 = "0.5.0"
askama = { version = "0.12.0" }
async-trait = "0.1.68"
axum = { version = "0.6.18", features = ["http2"] }
axum-server = { version = "0.5.1", features = ["rustls", "rustls-pemfile", "tls-rustls"] }
base64 = "0.21.2"
bzip2 = { version = "0.4.4", features = ["tokio"] }
chrono = { version = "0.4.26", features = ["serde"] }
chrono-humanize = "0.2.2"
clap = { version = "4.3.2", features = ["derive"] }
csv = "1.2.2"
diesel = { version = "2.1.0", features = ["sqlite", "chrono"] }
diesel_migrations = { version = "2.1.0", features = ["sqlite"] }
flate2 = "1.0.26"
futures = "0.3.28"
hyper = "0.14.26"
lazy_static = "1.4.0"
lettre = "0.10.4"
log = "0.4.18"
rand_core = { version = "0.6.4", features = ["getrandom"] }
regex = "1.8.4"
reqwest = { version = "0.11.18", features = ["json", "cookies"] }
rust-embed = "6.7.0"
rustls-pemfile = "1.0.2"
scraper = "0.17.1"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
serde_yaml = "0.9.21"
serenity = { version = "0.11.5", default-features = false, features = ["builder", "cache", "client", "chrono","gateway", "model", "utils", "rustls_backend"] }
simple_logger = "4.1.0"
tempfile = "3.6.0"
thirtyfour = "0.31.0"
tokio = { version = "1.28.2", features = ["macros", "rt-multi-thread", "time"] }
tokio-rustls = "0.24.0"
tokio-stream = "0.1.14"
tower = { version = "0.4.13", features = ["limit", "timeout", "buffer"] }
tower-http = { version = "0.4.0", features = ["timeout", "limit", "cors"] }
url = "2.4.0"
urlencoding = "2.1.3"
uuid = { version = "1.3.3", features = ["v4"] }


[profile.release]
lto = "thin"

[[bin]]
name = "yoake_server"
path = "src/bin/server.rs"
